<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">


    <RelativeLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


        <RelativeLayout
                android:id="@+id/profileLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profileImageMarginTop"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/contactLayout">

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImage"
                    android:src="@drawable/profile"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/profile_image"/>

            <TextView
                    android:id="@+id/nameText"
                    android:textSize="@dimen/profileTextSize"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/profileImage"
                    android:layout_marginTop="@dimen/nameMarginTop"
                    android:text="@string/nameString"/>

            <TextView
                    android:id="@+id/professionText"
                    android:textSize="@dimen/profileTextSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/nameText"
                    android:layout_marginBottom="@dimen/professionTextMarginBottom"
                    android:text="@string/professionTextString"/>

        </RelativeLayout>


        <RelativeLayout
                android:id="@+id/contactLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/contactMarginTop"
                android:layout_marginEnd="@dimen/marginLeft"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true">

            <TextView
                    android:id="@+id/contactText"
                    android:text="@string/contactString"
                    android:textAlignment="center"
                    android:textSize="@dimen/contactTextSize"
                    android:textStyle="bold"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/contactNumberText"
                    android:text="@string/numberString"
                    android:textAlignment="center"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/contactText"
                    android:layout_marginTop="@dimen/contactTextMarginBetween"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"/>

            <TextView
                    android:id="@+id/contactEmailText"
                    android:text="@string/emailString"
                    android:textAlignment="center"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/contactNumberText"
                    android:layout_marginTop="@dimen/contactTextMarginBetween"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/descriptionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/descriptionLayoutMarginTop"
            android:layout_marginStart="@dimen/descriptionLayoutMarginSide"
            android:layout_marginEnd="@dimen/descriptionLayoutMarginSide"
            app:layout_constraintTop_toBottomOf="@id/topLayout"
            app:layout_constraintStart_toStartOf="parent">
        <ImageView
                android:id="@+id/aboutIcon"
                android:layout_width="@dimen/iconSize"
                android:layout_height="@dimen/iconSize"
                android:layout_alignParentTop="true"
                android:src="@drawable/about"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/titleTextSize"
                android:layout_marginStart="@dimen/iconMargin"
                android:layout_toEndOf="@id/aboutIcon"
                android:text="@string/aboutTitle"/>
        <TextView
                android:id="@+id/aboutText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textIndent"
                android:layout_below="@id/aboutIcon"/>

        <ImageView
                android:id="@+id/educationIcon"
                android:layout_width="@dimen/iconSize"
                android:layout_height="@dimen/iconSize"
                android:layout_below="@id/aboutText"
                android:src="@drawable/education"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/titleTextSize"
                android:layout_marginStart="@dimen/iconMargin"
                android:layout_toEndOf="@id/educationIcon"
                android:layout_below="@id/aboutText"
                android:text="@string/educationTitle"/>
        <TextView
                android:id="@+id/educationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textIndent"
                android:layout_below="@id/educationIcon"/>

        <ImageView
                android:id="@+id/experienceIcon"
                android:layout_width="@dimen/iconSize"
                android:layout_height="@dimen/iconSize"
                android:layout_below="@id/educationText"
                android:src="@drawable/experience"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/titleTextSize"
                android:layout_marginStart="@dimen/iconMargin"
                android:layout_toEndOf="@id/experienceIcon"
                android:layout_below="@id/educationText"
                android:text="@string/experienceTitle"/>
        <TextView
                android:id="@+id/experienceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textIndent"
                android:layout_below="@id/experienceIcon"/>

        <ImageView
                android:id="@+id/languagesIcon"
                android:layout_width="@dimen/iconSize"
                android:layout_height="@dimen/iconSize"
                android:layout_below="@id/experienceText"
                android:src="@drawable/language"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/titleTextSize"
                android:layout_marginStart="@dimen/iconMargin"
                android:layout_toEndOf="@id/languagesIcon"
                android:layout_below="@id/experienceText"
                android:text="@string/languagesTitle"/>
        <TextView
                android:id="@+id/languagesText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textIndent"
                android:layout_below="@id/languagesIcon"/>


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>